<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/step_list_linearLayout"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <!--<TextView-->
        <!--android:id="@+id/id_text"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="16dp"-->
        <!--tools:text="1" />-->

    <TextView
        android:id="@+id/recipe_step_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="#000000"
        tools:text="Recipe Step" />
</LinearLayout>
